chore: testing ssg

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,7 @@
 // set theme colors
 $primary: #ce2127;
 $dark: #212121;
-$theme1: #d12828;
+$theme1: #da3d11;
 
 @import 'node_modules/bootstrap/scss/_functions';
 @import 'node_modules/bootstrap/scss/_variables';
